# weblogin

./: CLAUDE.md  LICENSE  Makefile  README.md  intro.md  pyproject.toml
doc/: .gitignore  Makefile  abstract.tex  contents.tex  intro.tex  preamble.tex  weblogin.tex
doc/figs/: .gitignore  Makefile
src/weblogin/: .gitignore  CLAUDE.md  Makefile  init.nw  kth.nw  ladok.nw  mfa.nw  mfa.py  mfa.tex  microsoft.nw  seamlessaccess.nw
tests/: .gitignore  CLAUDE.md  Makefile  conftest.py
