[tool.poetry]
name = "weblogin"
version = "0.1"
description = "Automates logging into web UIs to access unofficial APIs"
authors = ["Daniel Bosk <dbosk@kth.se>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
