[tool.poetry]
name = "weblogin"
version = "1.4"
description = "Automates logging into web UIs to access unofficial APIs"
authors = ["Daniel Bosk <dbosk@kth.se>"]
license = "MIT"
readme = "intro.md"
repository = "https://github.com/dbosk/weblogin"
include = ["src/**/*.py"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dbosk/ladok3/issues"
"Releases" = "https://github.com/dbosk/ladok3/releases"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
