[tool.poetry]
name = "weblogin"
version = "1.13"
description = "Automates logging into web UIs to access unofficial APIs"
authors = ["Daniel Bosk <dbosk@kth.se>"]
license = "MIT"
readme = "intro.md"
repository = "https://github.com/dbosk/weblogin"
include = [
  {path="src/**/*.py", format="wheel"},
  {path="src/**/*.nw", format="sdist"},
  {path="src/**/Makefile", format="sdist"},
  {path="src/**/*.tex", format="sdist"}
]
exclude = [
  {path="src/**/*.py", format="sdist"},
  {path="src/**/*.nw", format="wheel"},
  "*/**/.gitignore",
  "*/**/ltxobj",
  "*/**/__pycache__"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dbosk/weblogin/issues"
"Releases" = "https://github.com/dbosk/weblogin/releases"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
lxml = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
